@@ -35,6 +35,8 @@ Release 0.19.4 - Unreleased
   IMPROVEMENTS
    HBASE-1722  Add support for exporting HBase metrics via JMX
                (Gary Helmling via Stack)
+   HBASE-1771  PE sequentialWrite is 7x slower because of
+               MemStoreFlusher#checkStoreFileCount
 
 Release 0.19.3 - May 27th, 2009
   BUG FIXES
